force-app/main/default/objects/Action_History__c/Action_History__c.object-meta.xml
<CustomObject>
    <label>Action History</label>
    <nameField>
        <label>Action History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>