force-app/main/default/objects/Action_History__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Status Updated</fullName>
            </value>
            <value>
                <fullName>Stage Updated</fullName>
            </value>
            <value>
                <fullName>Status &amp; Stage Updated</fullName>
            </value>
            <value>
                <fullName>FIELD_CHANGE</fullName>
            </value>
            <value>
                <fullName>FIELD_CHANGE_BULK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>