force-app/main/default/objects/Action_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft – New</fullName>
            </value>
            <value>
                <fullName>Draft – Updating</fullName>
            </value>
            <value>
                <fullName>Pending Sale Leader Review</fullName>
            </value>
            <value>
                <fullName>Feedback by Sale Leader</fullName>
            </value>
            <value>
                <fullName>Approved by Sale Leader</fullName>
            </value>
            <value>
                <fullName>Pending Sale Manager Approval</fullName>
            </value>
            <value>
                <fullName>Feedback by Sale Manager</fullName>
            </value>
            <value>
                <fullName>Approved by Sale Manager</fullName>
            </value>
            <value>
                <fullName>Pending Dev Manager Accept</fullName>
            </value>
            <value>
                <fullName>Returned to Sale</fullName>
            </value>
            <value>
                <fullName>Dev Manager Accept</fullName>
            </value>
            <value>
                <fullName>Assigned to Dev Leader</fullName>
            </value>
            <value>
                <fullName>Returned to Dev Manager</fullName>
            </value>
            <value>
                <fullName>Dev Leader Accept</fullName>
            </value>
            <value>
                <fullName>Proposal &amp; CV preparing</fullName>
            </value>
            <value>
                <fullName>Request Dev Manager Review</fullName>
            </value>
            <value>
                <fullName>Approved Dev Manager</fullName>
            </value>
            <value>
                <fullName>Tender Updating</fullName>
            </value>
            <value>
                <fullName>Pending Dev Manager Approval (Rework)</fullName>
            </value>
            <value>
                <fullName>Approved After Rework</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Rework Required</fullName>
            </value>
            <value>
                <fullName>On Hold - Customer Side</fullName>
            </value>
            <value>
                <fullName>On Hold - Internal Decision</fullName>
            </value>
            <value>
                <fullName>On Hold - Resource Unavailable</fullName>
            </value>
            <value>
                <fullName>On Hold - Budget Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled - Internal Decision</fullName>
            </value>
            <value>
                <fullName>Cancelled - Customer Withdrawn</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>