force-app/main/default/objects/Action_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>