force-app/main/default/objects/Action_History__c/fields/Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage__c</fullName>
    <label>Old Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sale Review</fullName>
            </value>
            <value>
                <fullName>Sale Approval</fullName>
            </value>
            <value>
                <fullName>Dev Assessment</fullName>
            </value>
            <value>
                <fullName>Proposal Preparation</fullName>
            </value>
            <value>
                <fullName>Customer Review</fullName>
            </value>
            <value>
                <fullName>On Hold/Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>