force-app/main/default/objects/Action_History__c/fields/Performed_By_Employee__c.field-meta.xml
<CustomField>
    <fullName>Performed_By_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Action Histories</relationshipLabel>
    <relationshipName>Action_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>