force-app/main/default/objects/Action_History__c/fields/Performed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Performed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>